<resources>
    <string name="app_name">Youth Connect Project</string>
    <string name="welcome_to_the_youth_connect">Welcome to the Youth Connect</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="click_to_login">Already have an account? Login here</string>
    <string name="click_to_register">Don\'t have an account? Register here</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_admin_page_for_the_youth_connect">Welcome to the admin page for the Youth Connect.</string>
    <string name="view_events">View Events</string>
    <string name="view_all_users">View All Users</string>
    <string name="edit_account_info">Edit Account Info</string>
    <string name="edit_account_information">Edit Account Information</string>
    <string name="update_profile">Update Profile</string>
    <string name="go_back">Go Back</string>
    <string name="welcome_to_the_youth_connect_app_events_page">Welcome to the Youth Connect App Events page</string>
    <string name="events_page">Add an event to the Events Page</string>
    <string name="change_password">Change Password with current Email</string>
    <string name="let_s_change_your_password">Let\'s Change your Password</string>
    <string name="enter_your_email_below_to_update_your_password">Enter your current email below to update your password:</string>
    <string name="forgot_your_password_click_here">Forgot your password? Click here</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="events_name">Events Name</string>
    <string name="events_description">Events Description</string>
    <string name="event_activities">Events Activities</string>
    <string name="add_event">Add Event</string>
    <string name="view_all_events">View All Events</string>
    <string name="all_events">All Events</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_event_information">Edit Event Information</string>
    <string name="update_event">Update Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="all_users">All Users</string>
    <string name="delete_user">Delete Account</string>
    <string name="view_user">View User</string>
</resources>