<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcome_to_the_youth_connect_app_events_page"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/youth_logo"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_view_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_events"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_account_info"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        />


    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        />

</LinearLayout>